--- a/content/post/IntroModelplotr.Rmd
+++ b/content/post/IntroModelplotr.Rmd
@@ -128,7 +128,7 @@ It’s up to you how many equally sized groups you want to use. It’s common pr
 
 Each chart plots the deciles on the x axis and another measure on the y axis. The deciles are plotted from left to right so the observations with the highest model probability are on the left side of the plot. This results in plots like this:
 
-[//]: # (![](/img/decileplot.png) )
+![](/img/decileplot.png) 
 
 Now that it’s clear what is on the horizontal axis of each of the plots, we can go into more detail on the metrics per plot on the vertical axis. Per plot, we’ll start with a brief explanation what insight you gain with the plot from a business perspective. After that, we can go into more detail on the plotted lines.
 
@@ -146,7 +146,7 @@ Consequently, it also provides insights in the percentage you’ll miss when app
 
 What part of the actual target class members you did pick, that’s what the cumulative gains chart tells you. The plot comes with two references to tell you how good/bad your model is: The random model line and the wizard model line. The random model line tells you what proportion of the actual target class you would expect to select when no model is used at all. This vertical line runs from the origin (with 0% of cases, you can only have 0% of the actual target class members) to the upper right corner (with 100% of the cases, you have 100% of the target class members). It’s the rock bottom of how your model can perform; are you close to this, then your model is not much better than a flip of a coin. The wizard model is the upper bound of what your model can do. It starts in the origin and rises as steep as possible towards 100%. If less than 10% of all cases belong to the target category, this means that it goes from the origin to the value of decile 1 and cumulative gains of 100%, for all other deciles the cumulative gains remains at 100% as it is a cumulative measure. Your model will always move between these two reference lines and looks like this: 
 
-[//]: # (![](/img/cumgainsplot.png))
+![](/img/cumgainsplot.png)
 
 To generate the cumulate gains plot, we can simply call the function **cumgains()**:
 
@@ -164,7 +164,7 @@ The lift chart helps you in explaining how much better selecting based on you mo
 
 The lift chart only has one reference line: the ‘random model’.  With a random model we mean that each observation gets a random number and all cases are devided into deciles based on these random numbers. The % of actual target category observations in each decile would be equal to the overall % of actual target category observations in the total set. Since the lift is calculated as the ratio of these two numbers, we het a flatliner at the value of 1. Your model should however be able to do better, resulting in a high ratio for decile 1. In the end, since the plot is cumulative, with 100% of cases, we have the whole set again and therefore the cumulative lift will always end up at a value of 1. It looks like this:
 
-[//]: # (![](/img/cumliftplot.png))
+![](/img/cumliftplot.png)
 
 To generate the cumulate lift plot, we can simply call the function **lift()**:
 
@@ -180,7 +180,7 @@ One of the easiest to explain evaluation plots is the response plot. It simply p
 
 The plot has one reference line: The % of target class cases in the total set. It looks like this:
 
-[//]: # (![](/img/responseplot.png))
+![](/img/responseplot.png)
 
 A good model starts high in decile 1 and drops quickly towards 0. How steep the decline can be, also depends on the % of target class in the total set. Interesting is the location where your model’s line intersects the random model line. From here, the % of target class cases is lower than a random selection of cases would hold.  
 
@@ -198,7 +198,7 @@ And finally, one of the most used charts: The cumulative response chart. It answ
 
 The reference line in this plot is the same as in the response chart: the % of target class cases in the total set. 
 
-[//]: # (![](/img/cumresponseplot.png))
+![](/img/cumresponseplot.png)
 
 Whereas the response plot crosses the reference line, in the cumulative response plot it approaches it to end at the same point: Selecting all cases up until decile 10 is the same as selecting all cases, hence the % of target class cases will be exactly the same.
 
